@@ -20,7 +20,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.reflect.InvocationTargetException;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.http.HttpRequest;
@@ -35,7 +34,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 import net.tourbook.application.TourbookPlugin;
 import net.tourbook.cloud.Activator;
@@ -54,15 +52,17 @@ import net.tourbook.data.TourPerson;
 import net.tourbook.database.TourDatabase;
 import net.tourbook.extension.download.TourbookCloudDownloader;
 import net.tourbook.tour.TourLogManager;
-import net.tourbook.tour.TourLogManager.AutoOpenEvent;
 
 import org.eclipse.core.runtime.IProgressMonitor;
-import org.eclipse.jface.dialogs.MessageDialog;
-import org.eclipse.jface.dialogs.ProgressMonitorDialog;
-import org.eclipse.jface.operation.IRunnableWithProgress;
+import org.eclipse.core.runtime.IStatus;
+import org.eclipse.core.runtime.Status;
+import org.eclipse.core.runtime.jobs.IJobChangeEvent;
+import org.eclipse.core.runtime.jobs.Job;
+import org.eclipse.core.runtime.jobs.JobChangeAdapter;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.widgets.Display;
+import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.dialogs.PreferencesUtil;
 
 public class SuuntoCloudDownloader extends TourbookCloudDownloader {
@@ -108,7 +108,7 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
       });
 
       final int[] numberOfDownloadedTours = new int[1];
-      workoutDownloads.stream().map(CompletableFuture::join).forEach(workoutDownload -> {
+      workoutDownloads.stream().map(download -> download.join()).forEach(workoutDownload -> {
          if (monitor.isCanceled()) {
             return;
          } else if (logDownloadResult(workoutDownload)) {
@@ -145,23 +145,18 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
       _numberOfAvailableTours = new int[1];
       final int[] numberOfDownloadedTours = new int[1];
 
-      final IRunnableWithProgress runnable = new IRunnableWithProgress() {
+      final Job job = new Job(Messages.Dialog_DownloadWorkoutsFromSuunto_Task) {
 
          @Override
-         public void run(final IProgressMonitor monitor) throws InvocationTargetException, InterruptedException {
+         public IStatus run(final IProgressMonitor monitor) {
 
-            monitor.beginTask(Messages.Dialog_DownloadWorkoutsFromSuunto_Task, 2);
+            monitor.beginTask(UI.EMPTY_STRING, 3);
 
             monitor.subTask(Messages.Dialog_ValidatingSuuntoTokens_SubTask);
 
             if (!SuuntoTokensRetrievalHandler.getValidTokens(_useActivePerson, _useAllPeople)) {
-               TourLogManager.log_ERROR(LOG_CLOUDACTION_INVALIDTOKENS);
-               return;
-            }
-
-            if (StringUtils.isNullOrEmpty(getDownloadFolder())) {
-               TourLogManager.log_ERROR(Messages.Log_DownloadWorkoutsFromSuunto_004_NoSpecifiedFolder);
-               return;
+               Display.getDefault().asyncExec(() -> TourLogManager.log_ERROR(LOG_CLOUDACTION_INVALIDTOKENS));
+               return Status.CANCEL_STATUS;
             }
 
             monitor.subTask(NLS.bind(Messages.Dialog_DownloadWorkoutsFromSuunto_SubTask,
@@ -169,25 +164,26 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
                         UI.SYMBOL_HOURGLASS_WITH_FLOWING_SAND,
                         UI.EMPTY_STRING,
                         UI.EMPTY_STRING }));
+            monitor.worked(1);
 
             //Get the list of workouts
             final Workouts workouts = retrieveWorkoutsList();
-            if (workouts.payload.isEmpty()) {
-               TourLogManager.log_INFO(Messages.Log_DownloadWorkoutsFromSuunto_002_NewWorkoutsNotFound);
-               return;
+            if (workouts == null || workouts.payload().isEmpty()) {
+               Display.getDefault().asyncExec(() -> TourLogManager.log_INFO(Messages.Log_DownloadWorkoutsFromSuunto_002_NewWorkoutsNotFound));
+               return Status.CANCEL_STATUS;
             }
 
             final List<Long> tourStartTimes = retrieveAllTourStartTimes();
 
             //Identifying the workouts that have not yet been imported in the tour database
-            final List<Payload> newWorkouts = workouts.payload.stream()
+            final List<Payload> newWorkouts = workouts.payload().stream()
                   .filter(suuntoWorkout -> !tourStartTimes.contains(suuntoWorkout.startTime / 1000L * 1000L))
-                  .collect(Collectors.toList());
+                  .toList();
 
             final int numNewWorkouts = newWorkouts.size();
             if (numNewWorkouts == 0) {
-               TourLogManager.log_INFO(Messages.Log_DownloadWorkoutsFromSuunto_003_AllWorkoutsAlreadyExist);
-               return;
+               Display.getDefault().asyncExec(() -> TourLogManager.log_INFO(Messages.Log_DownloadWorkoutsFromSuunto_003_AllWorkoutsAlreadyExist));
+               return Status.CANCEL_STATUS;
             }
 
             _numberOfAvailableTours[0] = numNewWorkouts;
@@ -203,31 +199,39 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
             numberOfDownloadedTours[0] = downloadFiles(newWorkouts, monitor);
 
             monitor.worked(1);
+
+            monitor.done();
+
+            return Status.OK_STATUS;
          }
       };
 
-      try {
-         final long start = System.currentTimeMillis();
+      final long start = System.currentTimeMillis();
 
-         TourLogManager.showLogView(AutoOpenEvent.DOWNLOAD_SOMETHING);
-         TourLogManager.log_TITLE(Messages.Log_DownloadWorkoutsFromSuunto_001_Start);
+      TourLogManager.log_TITLE(Messages.Log_DownloadWorkoutsFromSuunto_001_Start);
 
-         new ProgressMonitorDialog(Display.getCurrent().getActiveShell()).run(true, true, runnable);
+      job.setPriority(Job.INTERACTIVE);
+      job.schedule();
 
-         TourLogManager.log_TITLE(String.format(LOG_CLOUDACTION_END, (System.currentTimeMillis() - start) / 1000.0));
+      job.addJobChangeListener(new JobChangeAdapter() {
+         @Override
+         public void done(final IJobChangeEvent event) {
 
-         MessageDialog.openInformation(
-               Display.getDefault().getActiveShell(),
-               Messages.Dialog_DownloadWorkoutsFromSuunto_Title,
-               NLS.bind(Messages.Dialog_DownloadWorkoutsFromSuunto_Message,
-                     numberOfDownloadedTours[0],
-                     _numberOfAvailableTours[0] - numberOfDownloadedTours[0]));
+            if (PlatformUI.isWorkbenchRunning() && event.getResult().isOK()) {
 
-      } catch (final InvocationTargetException | InterruptedException e) {
-         StatusUtil.log(e);
-         Thread.currentThread().interrupt();
-      }
+               PlatformUI.getWorkbench().getDisplay().asyncExec(() -> {
 
+                  TourLogManager.log_TITLE(String.format(LOG_CLOUDACTION_END, (System.currentTimeMillis() - start) / 1000.0));
+
+                  final String infoText = NLS.bind(Messages.Dialog_DownloadWorkoutsFromSuunto_Message,
+                        numberOfDownloadedTours[0],
+                        _numberOfAvailableTours[0] - numberOfDownloadedTours[0]);
+
+                  UI.openNotificationPopup(Messages.Dialog_DownloadWorkoutsFromSuunto_Title, infoText);
+               });
+            }
+         }
+      });
    }
 
    private String getAccessToken() {
@@ -309,12 +313,12 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
 
          isTourDownloaded = true;
 
-         TourLogManager.log_OK(
+         Display.getDefault().asyncExec(() -> TourLogManager.log_OK(
                NLS.bind(Messages.Log_DownloadWorkoutsFromSuunto_005_DownloadStatus,
                      workoutDownload.getWorkoutKey(),
-                     workoutDownload.getAbsoluteFilePath()));
+                     workoutDownload.getAbsoluteFilePath())));
       } else {
-         TourLogManager.log_ERROR(workoutDownload.getError());
+         Display.getDefault().asyncExec(() -> TourLogManager.log_ERROR(workoutDownload.getError()));
       }
 
       return isTourDownloaded;
@@ -396,7 +400,7 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
          Thread.currentThread().interrupt();
       }
 
-      return new Workouts();
+      return null;
    }
 
    private CompletableFuture<WorkoutDownload> sendAsyncRequest(final Payload workoutPayload,
@@ -404,15 +408,15 @@ public class SuuntoCloudDownloader extends TourbookCloudDownloader {
 
       final CompletableFuture<WorkoutDownload> workoutDownload =
             OAuth2Utils.httpClient.sendAsync(request, HttpResponse.BodyHandlers.ofInputStream())
-            .thenApply(response -> writeFileToFolder(workoutPayload, response))
-            .exceptionally(e -> {
-               final WorkoutDownload erroneousDownload = new WorkoutDownload(workoutPayload.workoutKey);
-               erroneousDownload.setError(NLS.bind(Messages.Log_DownloadWorkoutsFromSuunto_007_Error,
-                     erroneousDownload.getWorkoutKey(),
-                     e.getMessage()));
-               erroneousDownload.setSuccessfullyDownloaded(false);
-               return erroneousDownload;
-            });
+                  .thenApply(response -> writeFileToFolder(workoutPayload, response))
+                  .exceptionally(e -> {
+                     final WorkoutDownload erroneousDownload = new WorkoutDownload(workoutPayload.workoutKey);
+                     erroneousDownload.setError(NLS.bind(Messages.Log_DownloadWorkoutsFromSuunto_007_Error,
+                           erroneousDownload.getWorkoutKey(),
+                           e.getMessage()));
+                     erroneousDownload.setSuccessfullyDownloaded(false);
+                     return erroneousDownload;
+                  });
 
       return workoutDownload;
    }
